--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -50,6 +50,7 @@
   <script src="static/common/editableFieldDirective.js"></script>
   <script src="static/common/iconCheckboxDirective.js"></script>
   <script src="static/common/includeReplaceDirective.js"></script>
+  <script src="static/common/inputModelValidatorDirective.js"></script>
   <script src="static/common/loadingAnimationDirective.js"></script>
   <script src="static/common/paramFilter.js"></script>
   <script src="static/common/passwordMatchDirective.js"></script>
