Removed dynamic placeholder from textarea for note's title in editor.

--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -25,7 +25,7 @@
           input-model-validator ng-trim="false"
           ng-keydown="noteTitlebarTextKeyDown($event)" ng-focus="noteTitleFocused()" editable-field
           editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)" msd-elastic
-          dynamic-placeholder="enter note title&#8230;" maxlength="128"
+          placeholder="enter note title&#8230;" maxlength="128"
           autocapitalize="none" autocorrect="off">
         </textarea>
 
