--- a/frontend/core/src/main/webapp/static/app/base/tagEditor.html
+++ b/frontend/core/src/main/webapp/static/app/base/tagEditor.html
@@ -3,7 +3,7 @@
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large">
         <a href class="group-symmetrical--left link-navigation highlighted active" ng-click="endTagEdit()">
-          <span class="text-navigation-back" ng-bind="tagTitlebarHasText() && !tag.deleted ? 'save' : 'back'"></span>
+          <span class="text-navigation-back" ng-bind="isTagEdited() && !tag.deleted ? 'save' : 'back'"></span>
         </a>
         <a href ng-if="!tag.deleted" class="group-symmetrical--right" ng-click="deleteTagInEdit()" >
           <span class="icon-trash"></span>
@@ -14,10 +14,11 @@
 
       <div class="row-vertically-centered with-textarea">
         <!-- TODO: @ or # symbol! -->
-        <textarea ng-model="tag.trans.title" ng-keydown="tagTitlebarTextKeyDown($event)" editable-field
-          editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)" msd-elastic
-          dynamic-placeholder="enter {{tag.tagType}} title&#8230;" maxlength="128"
-          autocapitalize="none" autocorrect="off">
+        <textarea ng-model="tag.trans.title" input-model-validator ng-trim="false"
+          ng-keydown="tagTitlebarTextKeyDown($event)" msd-elastic
+          editable-field editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)"
+          dynamic-placeholder="enter {{tag.tagType}} title&#8230;"
+          maxlength="128" autocapitalize="none" autocorrect="off">
         </textarea>
       </div>
     </div>
@@ -27,14 +28,14 @@
     <div class="container-content" drawer-override-aisle="right">
 
       <div class="row-vertically-centered with-textarea">
-        <textarea ng-model="tag.trans.link" msd-elastic maxlength="128" placeholder="enter url&#8230;"
-          autocapitalize="none" autocorrect="off">
+        <textarea ng-model="tag.trans.link" input-model-validator ng-trim="false" msd-elastic
+          maxlength="128" placeholder="enter url&#8230;" autocapitalize="none" autocorrect="off">
         </textarea>
       </div>
 
       <div class="row-vertically-centered with-textarea">
-        <textarea ng-model="tag.trans.description" msd-elastic placeholder="enter description&#8230;"
-          maxlength="1024" autocapitalize="none" autocorrect="off">
+        <textarea ng-model="tag.trans.description" input-model-validator ng-trim="false" msd-elastic
+          placeholder="enter description&#8230;" maxlength="1024" autocapitalize="none" autocorrect="off">
         </textarea>
       </div>
 
