Use trans.tagType for binding in tag editor.

--- a/frontend/core/src/main/webapp/static/app/base/tagEditor.html
+++ b/frontend/core/src/main/webapp/static/app/base/tagEditor.html
@@ -17,7 +17,7 @@
         <textarea ng-model="tag.trans.title" input-model-validator ng-trim="false"
           ng-keydown="tagTitlebarTextKeyDown($event)" msd-elastic
           editable-field editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)"
-          dynamic-placeholder="enter {{tag.tagType}} title&#8230;"
+          dynamic-placeholder="enter {{tag.trans.tagType}} title&#8230;"
           maxlength="128" autocapitalize="none" autocorrect="off">
         </textarea>
       </div>
