--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
@@ -8,6 +8,6 @@
 
   <a href ng-class="onboardingInProgress && 'link-disable'" class="group-mixed--middle link-list-item"
     swiper-click="callAndWaitThenScroll(openTaskEditor, task)">
-    <span class="text-link" clamp=2 ng-bind="task.title"></span>
+    <span class="text-link" clamp=2 ng-bind="task.trans.title"></span>
   </a>
 </div>
