--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -27,7 +27,7 @@
       | limitTo: currentListLimitTo"
       list-item>
       <a href class="link-list-item" swiper-click="openItemEditor(item)">
-        <span class="text-link" clamp=2 ng-bind="item.title"></span>
+        <span class="text-link" clamp=2 ng-bind="item.trans.title"></span>
       </a>
     </div>
     <div list-prompt list-prompt-infos="listInfos"
