--- a/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/omnibarEditor.html
@@ -9,10 +9,10 @@
 
       <div class="group-mixed vertically-centered">
         <div class="group-mixed--middle">
-          <textarea ng-model="titlebar.text" ng-keydown="omnibarTitlebarTextKeyDown($event)" editable-field
-            editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)" msd-elastic
-            dynamic-placeholder="save to inbox / search&#8230;" maxlength="128"
-            autocapitalize="none" autocorrect="off">
+          <textarea ng-model="titlebar.text" ng-keydown="omnibarTitlebarTextKeyDown($event)" msd-elastic
+            editable-field editable-field-register-callbacks="registerTitleBarInputCallbacks(focus, blur)"
+            placeholder="save to inbox / search&#8230;"
+            maxlength="128" autocapitalize="none" autocorrect="off">
           </textarea>
         </div>
         <div ng-if="titlebar.text.length" class="group-mixed--right">
@@ -31,7 +31,7 @@
         class="group-mixed with-checkbox">
         <a href class="group-mixed--middle link-search-result"
           ng-click="initializeEditor(searchResult.trans.itemType, searchResult)">
-          <span class="text-search-result" clamp=2 ng-bind="searchResult.title"></span>
+          <span class="text-search-result" clamp=2 ng-bind="searchResult.trans.title"></span>
         </a>
         <div class="group-mixed--right">
           <span class="text-search-type" ng-bind="searchResult.trans.itemType"></span>
@@ -79,7 +79,7 @@
         <div ng-if="selectedKeywords && selectedKeywords.length" class="keywords-container row">
           <div class="keyword-wrapper" ng-repeat="keyword in selectedKeywords">
             <a href class="keyword highlighted" ng-click="unselectKeyword(keyword)">
-              <span class="text-keyword" ng-bind="'#' + keyword.title" clamp=1></span>
+              <span class="text-keyword" ng-bind="'#' + keyword.trans.title" clamp=1></span>
             </a>
           </div>
         </div>
@@ -90,7 +90,7 @@
             ng-repeat="keyword in filteredItems.unselectedKeywords = (keywords | filter:keywordsFilter)
             | filter:{title:keywordsSearch.text} | orderBy:'title'">
             <a href class="keyword link" ng-click="selectKeyword(keyword)">
-              <span class="text-keyword" ng-bind="'#' + keyword.title" clamp=1></span>
+              <span class="text-keyword" ng-bind="'#' + keyword.trans.title" clamp=1></span>
             </a>
           </div>
         </div>
@@ -99,7 +99,7 @@
         <div ng-if="footerExpandedToMaxHeight" class="keywords-container row">
           <div class="keyword-wrapper" ng-repeat="keyword in keywords | orderBy:'title'">
             <a href class="keyword link" ng-click="initializeEditor('tag', keyword)">
-              <span class="text-keyword" ng-bind="'#' + keyword.title" clamp=1></span>
+              <span class="text-keyword" ng-bind="'#' + keyword.trans.title" clamp=1></span>
             </a>
           </div>
         </div>
