--- a/frontend/core/src/main/webapp/static/app/lists/listTasks.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listTasks.html
@@ -1,6 +1,6 @@
 <div class="container-content--outer" ng-if="isFeatureActive('list')" list-container drawer-handle="left">
-  <section class="container-content" list="allTasks | itemsFilter:{name:'byListUUID', filterBy: list.uuid}"
-    swiper-prevent>
+  <section class="container-content"
+    list="allTasks | itemsFilter:{name:'byListUUID', filterBy: list.trans.uuid}" swiper-prevent>
     <div class="group-mixed heading">
       <div class="group-mixed--middle">
         <h2 class="group-heading justified">
@@ -9,11 +9,11 @@
       </div>
       <div class="group-mixed--right" task-list-completed></div>
     </div>
-    <div list-item-add="getNewTask({list: list.uuid})"
+    <div list-item-add="getNewTask({list: list.trans.uuid})"
       list-item-add-save="saveTask(newItem)" ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
     <div class="animate-list-item-leave"
       ng-repeat="task in listInfos.array = (getFullArray() | paramFilter:isListItemVisible)
-      | orderBy:'created':true
+      | orderBy:'trans.created':true
       | limitTo: currentListLimitTo"
       list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
     <div list-prompt="tasks" list-prompt-infos="listInfos" list-prompt-hide="[listItemAddActive]"></div>
