--- a/frontend/core/src/main/webapp/static/app/lists/listsArchived.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsArchived.html
@@ -4,7 +4,7 @@
     <div list-item-add="{trans: {itemType: 'list'}}" list-item-add-save="saveAndArchiveList(newItem)"
       ng-include="urlBase + 'app/lists/listListItemAdd.html'"></div>
     <div class="animate-list-item-leave"
-      ng-repeat="list in listInfos.array = (getFullArray()) | orderBy:'created':true
+      ng-repeat="list in listInfos.array = (getFullArray()) | orderBy:'trans.created':true
       | limitTo: currentListLimitTo"
       list-item ng-include="urlBase + 'app/lists/listListItem.html'"></div>
     <div list-prompt="lists" list-prompt-infos="listInfos" list-prompt-hide="[listItemAddActive]"></div>
