--- a/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskListItem.html
@@ -3,7 +3,7 @@
   <div class="group-mixed--left">
     <input type="checkbox" ng-model="task.trans.optimisticComplete" ng-model-options="{getterSetter: true}"
       swiper-click="toggleLeftCheckbox(task, toggleCompleteTask)"
-      icon-checkbox="getUniqueListItemId(task.uuid)">
+      icon-checkbox="getUniqueListItemId(task.trans.uuid)">
   </div>
 
   <a href ng-class="onboardingInProgress && 'link-disable'" class="group-mixed--middle link-list-item"
