--- a/frontend/core/src/main/webapp/static/app/tasks/tasksAll.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksAll.html
@@ -8,7 +8,7 @@
         </div>
         <div class="group-mixed--right" task-list-completed></div>
       </div>
-      <div list-item-add="getNewTask({completed: false})"
+      <div list-item-add="getNewTask()"
         list-item-add-save="saveTask(newItem)" ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
       <div class="animate-list-item-leave"
         ng-repeat="task in listInfos.array = (getFullArray() | paramFilter:isListItemVisible)
