--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
@@ -24,7 +24,7 @@
       | limitTo: currentListLimitTo" list-item>
       <div class="group-mixed">
         <a href class="group-mixed--middle link-list-item" swiper-click="swipeToContext(context)">
-          <span class="text-link" clamp=2 ng-bind="'@' + context.title"></span>
+          <span class="text-link" clamp=2 ng-bind="'@' + context.trans.title"></span>
         </a>
         <div class="group-mixed--right">
           <a href ng-click="swipeToContext(context)">
