--- a/frontend/core/src/main/webapp/static/app/lists/listListItem.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listListItem.html
@@ -5,6 +5,6 @@
     </a>
   </div>
   <a href ng-class="onboardingInProgress && 'link-disable'" class="group-mixed--middle link-list-item" swiper-click="changeFeature('list', list, true)">
-    <span class="text-link" clamp=2 ng-bind="list.title"></span>
+    <span class="text-link" clamp=2 ng-bind="list.trans.title"></span>
   </a>
 </div>
