text (ux) polish

--- a/frontend/core/src/main/webapp/static/app/entry/tutorial.html
+++ b/frontend/core/src/main/webapp/static/app/entry/tutorial.html
@@ -6,7 +6,7 @@
   </header>
   <div class="group-instruction">
     <h2 class="group-heading instruction row">let's get started with
-      <span class="highlighted">extended mind</span>
+      <span class="highlighted">extended<br />mind</span>
     </h2>
     <div class="textgroup-ingress row">it takes less than three minutes</div>
   </div>
