--- a/frontend/cordova/src/main/resources/ios/index.html
+++ b/frontend/cordova/src/main/resources/ios/index.html
@@ -32,6 +32,7 @@
     var urlPrefix = 'https://ext.md';
     var html5Mode = false;
     var bindToFocusEvent = false;
+    var enableOffline = true;
 
     // Wait for device API libraries to load
     //
@@ -50,7 +51,7 @@
   </script>
 </head>
 <body onload="onLoad()">
-  <div class="ios" root-view="offline"></div>
+  <div class="ios" root-view></div>
   <script src="static/${project.version}/em.min.js"></script>
 </body>
 </html>
