--- a/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusNotes.html
@@ -2,7 +2,9 @@
   <section ng-show="isOnboarded('focusNotes')" class="container-content"
     list="allNotes | itemsFilter:{name:'favorited'}"
     list-open="openEditor('note', getNewFavoriteNote())" swiper-prevent>
-    <h2 class="group-heading justified row">starred</h2>
+    <h2 class="group-heading justified row">
+      <span class="text-heading" ng-class="smallDeviceWidth && 'long'">starred notes</span>
+    </h2>
     <div class="animate-list-item-leave tall"
       ng-repeat="note in listInfos.array = (getFullArray()) | orderBy:'trans.favorited':true
       | limitTo: currentListLimitTo" list-item ng-include="urlBase + 'app/notes/noteListItem.html'"></div>
@@ -18,9 +20,9 @@
         <span class="highlighted">in use</span>?
       </h2>
       <div class="textgroup-ingress row">on this focus view you can see your
-        <span class="text-highlighted">favorite</span> notes
+        <span class="text-highlighted">starred</span> notes
       </div>
-      <div class="textgroup-ingress last row">add favorite notes here or by clicking star in note editor</div>
+      <div class="textgroup-ingress last row">add starred notes here or by clicking star in note editor</div>
     </div>
   </section>
   <footer ng-if="!isOnboarded('focusNotes')" class="container-content--after group-btn">
