--- a/frontend/core/src/main/webapp/static/app/lists/listsArchived.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listsArchived.html
@@ -1,6 +1,8 @@
 <div class="container-content--outer" ng-if="isFeatureActive('lists')" list-container>
   <section class="container-content" list="archivedLists" swiper-prevent>
-    <h2 class="group-heading justified row">archived</h2>
+    <h2 class="group-heading justified row">
+      <span class="text-heading" ng-class="smallDeviceWidth && 'long'">archived lists</span>
+    </h2>
     <div list-item-add="{trans: {itemType: 'list'}}" list-item-add-save="saveAndArchiveList(newItem)"
       ng-include="urlBase + 'app/lists/listListItemAdd.html'"></div>
     <div class="animate-list-item-leave"
