--- a/frontend/cordova/src/main/resources/android/index.html
+++ b/frontend/cordova/src/main/resources/android/index.html
@@ -22,6 +22,7 @@
   <meta charset="utf-8" />
   <meta name="fragment" content="!" />
   <meta name="format-detection" content="telephone=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
   <title>extended mind</title>
   <link rel="stylesheet" href="static/${project.version}/css/em.css"/>
